syntax = "proto3";

package proto;

option go_package = "github.com/puffyguy/grpcServerStreaming/proto";

message ServerRequest {
    int64 number1 = 1;
    int64 number2 = 2;
}

message Result {
    double sum=1;
    double sub=2;
    double mul=3;
    double div=4;
}

message ServerResponse {
    Result result = 1;
}

service AirthmeticService {
    rpc AirthmeticOperation(ServerRequest) returns (stream ServerResponse);
}